--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,12 @@ div.form-container {
   padding: 10px;
   margin-bottom: 30px;
 }
+
+table img {
+	max-width: 100px;
+	height: auto;
+}
+
+div.table-responsive {
+	margin-top: 7px;
+}
